// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package com.google.android.as.oss.logging;

option java_outer_classname = "PcsStatsEnums";
option java_package = "com.google.android.as.oss.logging";

enum CountMetricId {
  UNKNOWN_COUNT = 0;
  PCS_HTTP_DOWNLOAD_SUCCESS = 13;
  PCS_HTTP_DOWNLOAD_FAILURE = 14;
  PCS_INPROCESS_HTTP_DOWNLOAD_SUCCESS = 15;
  PCS_INPROCESS_HTTP_DOWNLOAD_FAILURE = 16;
  PCS_PIR_DOWNLOAD_SUCCESS = 17;
  PCS_PIR_DOWNLOAD_FAILURE = 18;
  PCS_INPROCESS_PIR_DOWNLOAD_SUCCESS = 19;
  PCS_INPROCESS_PIR_DOWNLOAD_FAILURE = 20;
  PCC_SETTINGS_OPENED = 90;
  PCS_NETWORK_USAGE_LOG_ACTIVITY_ENABLED = 92;
  PCS_NETWORK_USAGE_LOG_OPTED_OUT = 93;
  PCS_NETWORK_USAGE_LOG_OPTED_IN = 94;
  PCS_NETWORK_USAGE_LOG_OPENED = 95;
  PCS_NETWORK_USAGE_LOG_ITEM_INSPECTED = 96;
  PCS_NETWORK_USAGE_LOG_NO_ITEM_INSPECTED = 97;
  PCS_NETWORK_USAGE_LOG_POLICY_INSPECTED = 98;
  PCS_NETWORK_USAGE_LOG_UNRECOGNISED_REQUEST = 99;
  PCC_ATTESTATION_MEASUREMENT_REQUEST = 109;
  PCC_ATTESTATION_RECORD_GENERATED = 110;
  PCS_TRAINING_STATS_UNAVAILABLE_EXCEPTION = 113;
  PCS_TRAINING_STATS_QUERY_EXCEPTION = 114;
  PCS_TRAINING_STATS_QUERY_SUCCESS = 115;
  PCS_TRAINING_STATS_ATTEMPTED = 116;
  PCS_TRAINING_STATS_EXCEPTION_NO_CONFIGS_FOUND = 117;
  PCS_TRAINING_STATS_EXCEPTION_NO_MATCHING_RESTRICTED_CONFIGS = 118;
  PCS_TRAINING_STATS_EXCEPTION_AMBIGUOUS_CONFIG_KEY = 119;
  PCS_TRAINING_STATS_EXCEPTION_INCONSISTENT_ROW_SIZES = 120;
  PCS_TRAINING_STATS_EXCEPTION_UNKNOWN = 121;
}

enum ValueMetricId {
  UNKNOWN_VALUE = 0;
  PCS_STATSMANAGER_QUERY_SUCCESS_LATENCY_MS = 100;
  PCS_STATSMANAGER_QUERY_FAILURE_LATENCY_MS = 101;
  PCS_NUM_JOBS_SCHEDULED_COUNT = 102;
  NOW_PLAYING_POPULATION_SCHEDULED_COUNT = 103;
  NEXT_CONVERSATION_POPULATION_SCHEDULED_COUNT = 104;
  SAFE_COMMS_POPULATION_SCHEDULED_COUNT = 105;
  AUTOFILL_POPULATION_SCHEDULED_COUNT = 106;
  CONTENT_CAPTURE_POPULATION_SCHEDULED_COUNT = 107;
  ECHO_POPULATION_SCHEDULED_COUNT = 108;
  OVERVIEW_POPULATION_SCHEDULED_COUNT = 109;
  LIVE_TRANSLATE_POPULATION_SCHEDULED_COUNT = 130;
  TOAST_SEARCH_POPULATION_SCHEDULED_COUNT = 111;
  TOAST_QUERY_POPULATION_SCHEDULED_COUNT = 112;
  AMBIENT_CONTEXT_POPULATION_SCHEDULED_COUNT = 113;
  PECAN_POPULATION_SCHEDULED_COUNT = 114;
  PLAY_PROTECTION_POPULATION_SCHEDULED_COUNT = 115;
  PLATFORM_LOGGING_POPULATION_SCHEDULED_COUNT = 116;
  SMARTSELECT_POPULATION_SCHEDULED_COUNT = 117;
  UNKNOWN_POPULATION_SCHEDULED_COUNT = 118;
}

enum TrainingEventKind {
  TRAIN_UNDEFINED = 0;
  TRAIN_STARTED = 1;
  TRAIN_COMPLETED = 2;
  TRAIN_INTERRUPTED = 4;
  TRAIN_ERROR = 8;
  TRAIN_NOT_STARTED = 10;
  TRAIN_DOWNLOADED = 12;
  TRAIN_UPLOADED = 13;
  TRAIN_TURNED_AWAY = 14;
  TRAIN_DOWNLOAD_STARTED = 15;
  TRAIN_UPLOAD_STARTED = 16;
  TRAIN_ELIGIBILITY_EVAL_DOWNLOAD_STARTED = 17;
  TRAIN_ELIGIBILITY_EVAL_PLAN_URI_RECEIVED = 55;
  TRAIN_ELIGIBILITY_EVAL_PLAN_RECEIVED = 18;
  TRAIN_ELIGIBILITY_EVAL_NOT_CONFIGURED = 19;
  TRAIN_ELIGIBILITY_EVAL_TURNED_AWAY = 20;
  TRAIN_ELIGIBILITY_EVAL_DOWNLOAD_ERROR_IO = 21;
  TRAIN_ELIGIBILITY_EVAL_DOWNLOAD_ERROR_INVALID_PAYLOAD = 22;
  TRAIN_ELIGIBILITY_EVAL_DOWNLOAD_CLIENT_INTERRUPTED = 23;
  TRAIN_ELIGIBILITY_EVAL_DOWNLOAD_SERVER_ABORTED = 24;
  TRAIN_DOWNLOAD_ERROR_IO = 25;
  TRAIN_DOWNLOAD_ERROR_INVALID_PAYLOAD = 26;
  TRAIN_DOWNLOAD_CLIENT_INTERRUPTED = 27;
  TRAIN_DOWNLOAD_SERVER_ABORTED = 28;
  TRAIN_DOWNLOAD_PLAN_URI_RECEIVED = 56;
  TRAIN_DOWNLOAD_PLAN_RECEIVED = 29;
  TRAIN_DOWNLOAD_TURNED_AWAY = 30;
  TRAIN_ELIGIBILITY_EVAL_COMPUTATION_STARTED = 31;
  TRAIN_ELIGIBILITY_EVAL_COMPUTATION_ERROR_TENSORFLOW = 32;
  TRAIN_ELIGIBILITY_EVAL_COMPUTATION_ERROR_IO = 33;
  TRAIN_ELIGIBILITY_EVAL_COMPUTATION_ERROR_INVALID_ARGUMENT = 34;
  TRAIN_ELIGIBILITY_EVAL_COMPUTATION_ERROR_EXAMPLE_ITERATOR = 35;
  TRAIN_ELIGIBILITY_EVAL_COMPUTATION_CLIENT_INTERRUPTED = 36;
  TRAIN_ELIGIBILITY_EVAL_COMPUTATION_COMPLETED = 37;
  TRAIN_COMPUTATION_STARTED = 38;
  TRAIN_COMPUTATION_ERROR_TENSORFLOW = 39;
  TRAIN_COMPUTATION_ERROR_IO = 40;
  TRAIN_COMPUTATION_ERROR_INVALID_ARGUMENT = 41;
  TRAIN_COMPUTATION_ERROR_EXAMPLE_ITERATOR = 42;
  TRAIN_COMPUTATION_CLIENT_INTERRUPTED = 43;
  TRAIN_COMPUTATION_COMPLETED = 44;
  TRAIN_RESULT_UPLOAD_STARTED = 45;
  TRAIN_RESULT_UPLOAD_ERROR_IO = 46;
  TRAIN_RESULT_UPLOAD_CLIENT_INTERRUPTED = 47;
  TRAIN_RESULT_UPLOAD_SERVER_ABORTED = 48;
  TRAIN_RESULT_UPLOADED = 49;
  TRAIN_FAILURE_UPLOAD_STARTED = 50;
  TRAIN_FAILURE_UPLOAD_ERROR_IO = 51;
  TRAIN_FAILURE_UPLOAD_CLIENT_INTERRUPTED = 52;
  TRAIN_FAILURE_UPLOAD_SERVER_ABORTED = 53;
  TRAIN_FAILURE_UPLOADED = 54;
}

enum TrainingErrorCode {
  TRAIN_ERROR_DEFAULT = 0;
  TRAIN_ERROR_TENSORFLOW = 1;
  TRAIN_ERROR_LOCAL_IO = 2;
  TRAIN_ERROR_EXAMPLE_SELECTOR = 3;
}

enum TrainingDataSourceType {
  TRAINING_DATA_SOURCE_UNDEFINED = 0;
  FEED = 1;
  DATASET = 2;
}

enum SecAggClientEventKind {
  CLIENT_UNDEFINED_EVENT = 0;
  CLIENT_STARTED = 1;
  CLIENT_COMPLETED = 2;
  CLIENT_ROUND_STARTED = 3;
  CLIENT_ROUND_COMPLETED = 4;
  CLIENT_CRYPTO_STARTED = 5;
  CLIENT_CRYPTO_COMPLETED = 6;
  CLIENT_INPUT_SET = 7;
  CLIENT_ERROR = 8;
  CLIENT_CRYPTO_ERROR = 9;
}

enum SecAggClientRound {
  CLIENT_UNDEFINED_ROUND = 0;
  CLIENT_ADVERTISE_KEYS = 1;
  CLIENT_SHARE_KEYS = 2;
  CLIENT_MASKED_INPUT_COLLECTION = 3;
  CLIENT_UNMASKING = 4;
  CLIENT_PROTOCOL_COMPLETED = 5;
  CLIENT_ABORTED = 6;
}

enum SecAggClientCryptoOperationType {
  UNDEFINED_CRYPTO_OPERATION = 0;
  SHAMIR_SHARING = 1;
  KEY_AGREEMENT = 2;
  AES_ENCRYPTION = 3;
  AES_DECRYPTION = 4;
  PRG_EXPANSION = 5;
}

enum SecAggClientErrorCode {
  CLIENT_UNDEFINED_ERROR = 0;
  CLIENT_ERROR_SERVER_INITIATED_ABORT = 1;
  CLIENT_ERROR_ENVIRONMENT_INITIATED_ABORT = 2;
  CLIENT_INVALID_MESSAGE_RECEIVED = 3;
  CLIENT_INVALID_INPUT_VECTOR = 4;
  CLIENT_SECURITY_ERROR = 5;
  CLIENT_INTERNAL_ERROR = 6;
  CLIENT_INTERNAL_ERROR_RUNTIME_EXC = 7;
}
